# slice

./: Cargo.toml  README.md
.github/workflows/: release.yml  test.yml
scripts/: install.sh
src/: cli.rs  main.rs  parser.rs  utils.rs
tests/: cli.rs
